--- a/index.html
+++ b/index.html
@@ -550,6 +550,63 @@
   </div>
 </section>
 
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Observability vs. Performance</h2>
+        <div class="content has-text-justified">
+          <p>This table shows the effect of different observability settings (FOV, SFOV, Full) on task success, collision rates, and speed.</p>
+        </div>
+        <div class="image-container">
+          <figure>
+            <img src="./static/images/tables/observability_performance.png" alt="Observability Performance Table" class="responsive-image">
+            <figcaption class="caption">Table: Observability Performance Metrics</figcaption>
+          </figure>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Task Performance</h2>
+        <div class="content has-text-justified">
+          <p>This table illustrates the performance metrics such as success rate, collision rate, and average speed across different driving tasks.</p>
+        </div>
+        <div class="image-container">
+          <figure>
+            <img src="./static/images/tables/task_performance.png" alt="Task Performance Table" class="responsive-image">
+            <figcaption class="caption">Table: Task Performance Metrics</figcaption>
+          </figure>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Transmission Error vs. Intention Sharing</h2>
+        <div class="content has-text-justified">
+          <p>This table compares how different levels of transmission error affect the agent’s success rate, collision rate, and average speed when sharing vehicle intentions.</p>
+        </div>
+        <div class="image-container">
+          <figure>
+            <img src="./static/images/tables/transmission_error_intention.png" alt="Transmission Error Intention Table" class="responsive-image">
+            <figcaption class="caption">Table: Transmission Error vs. Intention Sharing</figcaption>
+          </figure>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 
 <!--/ Visulization Tool. -->
 <section class="section">
