Add left turn gif without intention sharing

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 
           <div class="column has-text-centered">
             <div class="publication-links">
+              <!-- ArXiv Link -->
               <span class="link-block">
                 <a href="https://arxiv.org/abs/2405.09111"
                    class="external-link button is-normal is-rounded is-dark">
@@ -85,6 +86,16 @@
                       <i class="ai ai-arxiv"></i>
                   </span>
                   <span>arXiv</span>
+                </a>
+              </span>
+              <!-- IEEE Link. -->
+              <span class="link-block">
+                <a href="https://ieeexplore.ieee.org/document/10714437"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                    <i class="fa-solid fa-newspaper"></i>
+                  </span>
+                  <span>IEEE Paper</span>
                 </a>
               </span>
               <!-- Code Link. -->
@@ -216,7 +227,7 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Multiple Training Tasks</h2>
+        <h2 class="title is-3">Built-in Tasks</h2>
         <div class="content has-text-justified">
           <p>
             CarDreamer provides a comprehensive set of driving tasks, such as lane changing and overtaking. These tasks allow extensive customization in terms of difficulty, observability, observation modalities, and communication of vehicle intentions.
@@ -629,20 +640,22 @@
   </div>
 </section>
 
-
-<section class="section" id="BibTeX">
+<section class="section" id="IEEE">
   <div class="container is-max-desktop content">
-    <h2 class="title">BibTeX</h2>
-    <pre><code>@article{CarDreamer2024,
-      title = {{CarDreamer: Open-Source Learning Platform for World Model based Autonomous Driving}},
-      author = {Dechen Gao, Shuangyu Cai, Hanchu Zhou, Hang Wang, Iman Soltani, Junshan Zhang},
-      journal = {arXiv preprint arXiv:2405.09111},
-      year = {2024},
-      month = {May}
+    <h2 class="title">IEEE Citation</h2>
+    <pre><code>@ARTICLE{10714437,
+      author={Gao, Dechen and Cai, Shuangyu and Zhou, Hanchu and Wang, Hang and Soltani, Iman and Zhang, Junshan},
+      journal={IEEE Internet of Things Journal}, 
+      title={CarDreamer: Open-Source Learning Platform for World Model Based Autonomous Driving}, 
+      year={2024},
+      volume={},
+      number={},
+      pages={1-1},
+      keywords={Autonomous Driving;Reinforcement Learning;World Model},
+      doi={10.1109/JIOT.2024.3479088}
     }</code></pre>
   </div>
 </section>
-
 
 
 <footer class="footer">
